--- a/index.html
+++ b/index.html
@@ -1,112 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEO &amp; Flexbox Best Practices</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+    <title>SEO &amp; Flexbox Best Practices</title>
+    <meta
+      name="description"
+      content="Learn the best SEO tips for optimizing your website with HTML and CSS."
+    />
+    <meta name="keywords" content="SEO, HTML, CSS, Web Optimization" />
+    <meta name="author" content="I don't know who am I!" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-  <header class="header">
-    <h1>Welcome to Flexbox, Accessibility &amp; SEO</h1>
-    <nav>
-      <ul class="nav-list">
-        <li><a href="#section-home">Home</a></li>
-        <li><a href="#section-gallery">Gallery</a></li>
-        <li><a href="#products-section">Products</a></li>
-      </ul>
-    </nav>
-  </header>
+  <body>
+    <header>
+      <h1>Welcome to Flexbox, Accessibility &amp; SEO</h1>
+      <nav>
+        <ul class="nav-list">
+          <li><a href="#section-home">Home</a></li>
+          <li><a href="#section-gallery">Gallery</a></li>
+          <li><a href="#products-section">Products</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <div id="section-home">
-  </div>
-  <div id="section-gallery">
-    <h2>Gallery</h2>
-    <hr>
-    <div class="gallery-container">
-      <div class="gallery-item"><img src="images/resource-tti-10.webp" alt=""></div>
-      <div class="gallery-item"><img src="images/resource-tti-13.webp" alt=""></div>
-      <div class="gallery-item"><img src="images/resource-tti-15.avif" alt=""></div>
-    </div>
-  </div>
-  <div id="section-products">
-    <h2>Products</h2>
-    <hr>
-    <div class="product-container">
-      <div class="product">
-        <img src="images/magnific-robot.webp" alt="">
-        <div class="product-info">
-          <h1>Product 1</h1>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
-            quas
-            sed provident quos quasi dicta assumenda, similique non reprehenderit a harum nobis, placeat, impedit
-            voluptatum.
-          </p>
-        </div>
-      </div>
-      <div class="product">
-        <img src="images/voting-rights-american-election_23-2151841484.avif" alt="">
-        <div class="product-info">
-          <h1>Product 2</h1>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
-            quas
-            sed provident quos quasi dicta assumenda, similique non reprehenderit a harum nobis, placeat, impedit
-            voluptatum.
-          </p>
-        </div>
-      </div>
-      <div class="product">
-        <img src="images/resource-tti-17.avif" alt="">
-        <div class="product-info">
-          <h1>Product 3</h1>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
-            quas
-            sed provident quos quasi dicta assumenda, similique non reprehenderit a harum nobis, placeat, impedit
-            voluptatum.
-          </p>
-        </div>
-      </div>
-      <div class="product">
-        <img src="images/resource-tti-14.avif" alt="">
-        <div class="product-info">
-          <h1>Product 4</h1>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
-            quas
-            sed provident quos quasi dicta assumenda, similique non reprehenderit a harum nobis, placeat, impedit
-            voluptatum.
-          </p>
-        </div>
-      </div>
-      <div class="product">
-        <img src="images/resource-tti-13.webp" alt="">
-        <div class="product-info">
-          <h1>Product 5</h1>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
-            quas
-            sed provident quos quasi dicta assumenda, similique non reprehenderit a harum nobis, placeat, impedit
-            voluptatum.
-          </p>
-        </div>
-      </div>
-      <div class="product">
-        <img src="images/resource-tti-10.webp" alt="">
-        <div class="product-info">
-          <h1>Product 6</h1>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
-            quas
-            sed provident quos quasi dicta assumenda, similique non reprehenderit a harum nobis, placeat, impedit
-            voluptatum.
-          </p>
+    <div id="section-home">
+      <div id="section-gallery">
+        <h2>Gallery</h2>
+        <hr />
+        <div class="gallery-container">
+          <div class="gallery-item">
+            <img
+              src="images/resource-tti-10.webp"
+              alt="SEO Tips for Better Rankings"
+              loading="lazy"
+            />
+          </div>
+          <div class="gallery-item">
+            <img
+              src="images/resource-tti-13.webp"
+              alt="SEO Tips for Better Rankings"
+              loading="lazy"
+            />
+          </div>
+          <div class="gallery-item">
+            <img
+              src="images/resource-tti-15.avif"
+              alt="SEO Tips for Better Rankings"
+              loading="lazy"
+            />
+          </div>
         </div>
       </div>
     </div>
-  </div>
+    <div id="section-products">
+      <h2>Products</h2>
+      <hr />
+      <div class="product-container">
+        <div class="product">
+          <img
+            src="images/magnific-robot.webp"
+            alt="SEO Tips for Better Rankings"
+            loading="lazy"
+          />
+          <div class="product-info">
+            <h3>Product 1</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
+              quis aspernatur ratione tempore quidem quas sed provident quos
+              quasi dicta assumenda, similique non reprehenderit a harum nobis,
+              placeat, impedit voluptatum.
+            </p>
+          </div>
+        </div>
+        <div class="product">
+          <img
+            src="images/voting-rights-american-election_23-2151841484.avif"
+            alt="SEO Tips for Better Rankings"
+            loading="lazy"
+          />
+          <div class="product-info">
+            <h3>Product 2</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
+              quis aspernatur ratione tempore quidem quas sed provident quos
+              quasi dicta assumenda, similique non reprehenderit a harum nobis,
+              placeat, impedit voluptatum.
+            </p>
+          </div>
+        </div>
+        <div class="product">
+          <img
+            src="images/resource-tti-17.avif"
+            alt="SEO Tips for Better Rankings"
+            loading="lazy"
+          />
+          <div class="product-info">
+            <h3>Product 3</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
+              quis aspernatur ratione tempore quidem quas sed provident quos
+              quasi dicta assumenda, similique non reprehenderit a harum nobis,
+              placeat, impedit voluptatum.
+            </p>
+          </div>
+        </div>
+        <div class="product">
+          <img
+            src="images/resource-tti-14.avif"
+            alt="SEO Tips for Better Rankings"
+            loading="lazy"
+          />
+          <div class="product-info">
+            <h3>Product 4</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
+              quis aspernatur ratione tempore quidem quas sed provident quos
+              quasi dicta assumenda, similique non reprehenderit a harum nobis,
+              placeat, impedit voluptatum.
+            </p>
+          </div>
+        </div>
+        <div class="product">
+          <img
+            src="images/resource-tti-13.webp"
+            alt="SEO Tips for Better Rankings"
+            loading="lazy"
+          />
+          <div class="product-info">
+            <h3>Product 5</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
+              quis aspernatur ratione tempore quidem quas sed provident quos
+              quasi dicta assumenda, similique non reprehenderit a harum nobis,
+              placeat, impedit voluptatum.
+            </p>
+          </div>
+        </div>
+        <div class="product">
+          <img
+            src="images/resource-tti-10.webp"
+            alt="SEO Tips for Better Rankings"
+            loading="lazy"
+          />
+          <div class="product-info">
+            <h3>Product 6</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
+              quis aspernatur ratione tempore quidem quas sed provident quos
+              quasi dicta assumenda, similique non reprehenderit a harum nobis,
+              placeat, impedit voluptatum.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <div class="footer">
-    <p>&copy; 2025 Flexbox, Accessibility &amp; SEO</p>
-  </div>
-</body>
-
+    <footer>
+      <p>&copy; 2025 Flexbox, Accessibility &amp; SEO</p>
+    </footer>
+  </body>
 </html>
